<resources>
    <string name="app_name">Fluent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="disconnect_call">Disconnect Call</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="room_id_caption">ROOM ID:</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="channel_error_title">Connection error</string>
    <string name="ok">OK</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--Auth Strings-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_word">Don\'t have an account?</string>
    <string name="login_word">Already have an account?</string>
    <string name="loading">Loading</string>
    <string name="logout">Logout</string>
</resources>
